[package]
name = "language"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
thiserror = "1.0"
num-traits = "0.2"
enum-primitive-derive = "0.2"

